<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">


    <RelativeLayout
        android:layout_width="412dp"
        android:layout_height="717dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="240dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="660dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/Nombre"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="240dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="590dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/Apellido"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextText3"
            android:layout_width="240dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="450dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/Usuario"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextNumberDecimal"
            android:layout_width="240dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="520dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/Edad"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="240dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="370dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/Contraseña"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="59dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="100dp"
            android:layout_marginTop="411dp"
            android:layout_marginEnd="102dp"
            android:layout_marginBottom="247dp"
            android:text="@string/Enviar" />

        <Button
            android:id="@+id/button4"
            android:layout_width="146dp"
            android:layout_height="56dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="140dp"
            android:layout_marginTop="556dp"
            android:layout_marginEnd="126dp"
            android:layout_marginBottom="105dp"
            android:text="@string/linearlayout" />

        <Button
            android:id="@+id/button5"
            android:layout_width="161dp"
            android:layout_height="49dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="136dp"
            android:layout_marginTop="636dp"
            android:layout_marginEnd="115dp"
            android:layout_marginBottom="32dp"
            android:text="@string/constraintlayout" />


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>